part1/1.12-1.13/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes:
        - name: todo-pv
          persistentVolumeClaim:
            claimName: todo-pv-claim
      containers:
        - name: todo
          image: epylkkan/training_kubernetes_devops:112-113
          volumeMounts: # Mount volume
          - name: todo-pv
            mountPath: /usr/src/app/public
