part1/1.12-1.13/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
spec:
  type: ClusterIP
  selector:
    app: todo
  ports:
    - port: 2345
      name: todo
      protocol: TCP
      targetPort: 3000
