part1/1.12-1.13/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-app
spec:
  rules:
  - host: localhost
  - http:
      paths:
      - path: /
        backend:
          serviceName: todo-svc
          servicePort: 2345
